--- a/mediaquaries.css
+++ b/mediaquaries.css
@@ -77,10 +77,16 @@
   #profile {
     display: flex;
     flex-direction: column;
-    margin: -3vh 0 4rem 0;
-    padding: 0 3rem;
+    margin: -3vh 0 0 0 !important;
+    padding: 0 3rem 0 3rem;
     height: fit-content;
-    min-height: 80vh;
+    min-height: auto;
+    margin-bottom: 0 !important;
+  }
+
+  #set-sail-adventure {
+    margin-top: 0 !important;
+    padding-top: 4rem;
   }
 
   .profile-logo {
@@ -97,13 +103,13 @@
   }
 
   .profile-buttons {
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     gap: 1rem;
   }
 
   .profile-buttons .btn {
-    width: 100%;
-    max-width: 300px;
+    width: fit-content;
   }
 
   .section-container {
@@ -182,11 +188,14 @@
   }
 
   #profile {
-    height: fit-content;
-    min-height: 70vh;
+    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 10vh 1.5rem 0;
     margin-bottom: 0 !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .profile-logo {
@@ -269,7 +278,7 @@
     background-color: transparent !important;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    padding: 0 1.5rem;
+    padding: 0 2rem;
   }
 
   #hamburger-nav .logo {
